--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -58,6 +58,7 @@
   justify-content: center;
   margin-right: 10%;
   margin-left: 10%;
+  font-family: ui-sans-serif, system-ui;
 }
 
 .nav-item a {
